# os-repo-1

./: .gitignore  Cargo.toml  README.md  makefile  rust-toolchain.toml
src/jectLib/: ject.cc  jectglobals.h  makefile.mk
src/more-wasm3/: Cargo.toml
src/portal-uefi/: Cargo.toml  makefile.mk
src/portal-uefi/src/: main.rs
src/taskd/: makefile.mk  master.h
