[package]
name = "portal-uefi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-wasm3 = {path = "../more-wasm3"}
# log = "0.4"
uefi = "0.20"
uefi-services = "0.17"
wasm3 = {version = "0.3.1", features = ["build-bindgen"]}
arrayref = "0.3.7"